--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "svelte": "5.0.4",
+    "svelte": "5.1.3",
     "svelte-check": "^4.0.0",
+    "svelte-radix": "^2.0.1",
     "tailwind-merge": "^2.5.4",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.9",
@@ -43,6 +44,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@builders-of-stuff/svelte-sui-wallet-adapter": "^1.1.2"
+    "@builders-of-stuff/svelte-sui-wallet-adapter": "^1.1.2",
+    "@mysten/sui": "^1.13.0"
   }
 }
