--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "type": "module",
   "dependencies": {
     "@builders-of-stuff/svelte-sui-wallet-adapter": "^1.1.2",
-    "@mysten/sui": "^1.13.0"
+    "@mysten/sui": "^1.13.0",
+    "phosphor-svelte": "^2.0.1"
   }
 }
