--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
     "lucide-svelte": "^0.454.0",
+    "mode-watcher": "^0.4.1",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "svelte": "5.1.3",
     "svelte-check": "^4.0.0",
     "svelte-radix": "^2.0.1",
+    "svelte-sonner": "^0.3.28",
     "tailwind-merge": "^2.5.4",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.9",
