--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@builders-of-stuff/svelte-sui-wallet-adapter": "1.1.3",
     "@mysten/sui": "^1.13.0",
+    "@sveltejs/adapter-static": "^3.0.6",
     "base-x": "^5.0.0",
     "phosphor-svelte": "^2.0.1"
   }
