--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@builders-of-stuff/svelte-sui-wallet-adapter": "1.1.3",
-    "@mysten/sui": "^1.13.0",
+    "@builders-of-stuff/svelte-sui-wallet-adapter": "1.1.4",
+    "@mysten/sui": "1.20.0",
     "@sveltejs/adapter-static": "^3.0.6",
     "base-x": "^5.0.0",
     "phosphor-svelte": "^2.0.1"
