--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+    "@sveltejs/vite-plugin-svelte": "^4.0.4",
     "@tailwindcss/typography": "^0.5.14",
     "@types/eslint": "^9.6.0",
     "autoprefixer": "^10.4.20",
